docs/wemake-python-styleguide/0.6.3/violations/consistency/WPS317.md
---
code: WPS317
internalName: ParametersIndentationViolation
title: Found incorrect multi-line parameters
---

Forbids to use incorrect parameters indentation.

## Reasoning
It is really easy to spoil your perfect, readable code with
incorrect multi-line parameters indentation. Since, it is really
easy to style them in any of 100 possible ways. We enforce a strict
rule about how it is possible to write these multi-line parameters.

## Solution
Use consistent multi-line parameters indentation.

## Example

    # Correct:
    def my_function(arg1, arg2, arg3) -> None:
        return None
    
    print(1, 2, 3, 4, 5, 6)
    
    def my_function(
        arg1, arg2, arg3,
    ) -> None:
        return None
    
    print(
        1, 2, 3, 4, 5, 6,
    )
    
    def my_function(
        arg1,
        arg2,
        arg3,
    ) -> None:
        return None
    
    print(
        first_variable,
        2,
        third_value,
        4,
        5,
        last_item,
    )
    
    # Special case:
    
    print('some text', 'description', [
        first_variable,
        second_variable,
        third_variable,
        last_item,
    ], end='')

Everything else is considered a violation. This rule checks: lists,
sets, tuples, dicts, calls, functions, methods, and classes.

<div class="versionadded">

0.6.0

</div>